fix: swagger info
